--- a/ngrok.yml
+++ b/ngrok.yml
@@ -3,7 +3,7 @@ authtoken: <add_your_token_here>
 tunnels:
     web:
         proto: http
-        addr: 80
-    ssh:
-        proto: tcp
-        addr: 22
+        addr: 8081
+        domain: <add_your_domain_here>
+        basic_auth:
+          - "username1:password1"
